@@ -18,4 +18,5 @@
 #undef SOUND_SUPPORTS_QUICKTIME
 #undef SOUND_SUPPORTS_SPEEX
 #undef SOUND_USE_ALTCVT
+#undef SOUND_MODPLUG_IN_OWN_PATH
 
